// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sets submit button label 'Save' when saving is false 1`] = `
<div
  className="form"
>
  <form
    onSubmit={[MockFunction]}
  >
    <h1>
      Edit
       Order
    </h1>
    <div
      className="form__group"
    >
      <input
        className=""
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Power tools"
      />
      <label
        className="form__group--label"
        htmlFor="title"
      >
        Title
      </label>
      <i
        className="form__group--bar"
      />
    </div>
    <div
      className="form__group"
    >
      <input
        className=""
        name="orderNum"
        onChange={[MockFunction]}
        type="text"
        value={249500}
      />
      <label
        className="form__group--label"
        htmlFor="orderNum"
      >
        Order ID
      </label>
      <i
        className="form__group--bar"
      />
    </div>
    <div
      className="form__group"
    >
      <select
        name="status"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Status
        </option>
        <option
          value={1}
        >
          Pending
        </option>
        <option
          value={2}
        >
          Completed
        </option>
        <option
          value={3}
        >
          Cancelled
        </option>
      </select>
      <label
        className="form__group--label"
        htmlFor="status"
      >
        Status
      </label>
      <i
        className="form__group--bar"
      />
    </div>
    <div
      className="form__button"
    >
      <button
        disabled={false}
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`sets submit button label 'Saving...' when saving is true 1`] = `
<div
  className="form"
>
  <form
    onSubmit={[MockFunction]}
  >
    <h1>
      Edit
       Order
    </h1>
    <div
      className="form__group"
    >
      <input
        className=""
        name="title"
        onChange={[MockFunction]}
        type="text"
        value="Power tools"
      />
      <label
        className="form__group--label"
        htmlFor="title"
      >
        Title
      </label>
      <i
        className="form__group--bar"
      />
    </div>
    <div
      className="form__group"
    >
      <input
        className=""
        name="orderNum"
        onChange={[MockFunction]}
        type="text"
        value={249500}
      />
      <label
        className="form__group--label"
        htmlFor="orderNum"
      >
        Order ID
      </label>
      <i
        className="form__group--bar"
      />
    </div>
    <div
      className="form__group"
    >
      <select
        name="status"
        onChange={[MockFunction]}
        value={1}
      >
        <option
          value=""
        >
          Select Status
        </option>
        <option
          value={1}
        >
          Pending
        </option>
        <option
          value={2}
        >
          Completed
        </option>
        <option
          value={3}
        >
          Cancelled
        </option>
      </select>
      <label
        className="form__group--label"
        htmlFor="status"
      >
        Status
      </label>
      <i
        className="form__group--bar"
      />
    </div>
    <div
      className="form__button"
    >
      <button
        disabled={true}
        type="submit"
      >
        <span>
          Saving...
        </span>
      </button>
    </div>
  </form>
</div>
`;
